@@ -1,3 +1,4 @@
+0.92.8-0 @03/14/2005 20:50:00 UTC@
 0.92.7-0 @03/05/2005 20:50:00 UTC@
 0.92.6-0 @03/01/2005 23:25:00 UTC@
 0.92.5-0 @02/22/2005 19:45:00 UTC@
